<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:weightSum="0.25"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:paddingLeft="16dp"
                                                   android:paddingRight="16dp"
                                                   tools:context=".GameActivity" android:id="@+id/linearLayout">

    <include layout="@layout/content_game"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" android:id="@+id/include"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
    />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/dice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="15dp" android:layout_marginRight="2dp" android:layout_marginEnd="2dp"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@drawable/dice_six_faces_one" android:id="@+id/imageViewDice1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="7dp" android:layout_marginStart="7dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageViewDice2" android:contentDescription="@string/dice1"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@drawable/dice_six_faces_two" android:id="@+id/imageViewDice2"
            app:layout_constraintStart_toEndOf="@+id/imageViewDice1" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageViewDice3" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp" android:contentDescription="@string/dice2"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@drawable/dice_six_faces_three" android:id="@+id/imageViewDice3"
            app:layout_constraintStart_toEndOf="@+id/imageViewDice2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageViewDice4" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp" android:contentDescription="@string/dice3"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@drawable/dice_six_faces_four" android:id="@+id/imageViewDice4"
            app:layout_constraintStart_toEndOf="@+id/imageViewDice3" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageViewDice5" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp" android:contentDescription="@string/dice4"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@drawable/dice_six_faces_five" android:id="@+id/imageViewDice5"
            android:layout_marginEnd="7dp" android:layout_marginRight="7dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp" app:layout_constraintStart_toEndOf="@+id/imageViewDice4"
            app:layout_constraintHorizontal_bias="0.5" android:contentDescription="@string/dice5"/>

</androidx.constraintlayout.widget.ConstraintLayout>