<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeScreen" android:background="#4CAF50">
    <TextView
            android:text="@string/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tbxWelcome"
            android:layout_marginEnd="178dp" android:layout_marginRight="178dp"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="178dp" android:layout_marginStart="178dp"
            android:paddingLeft="10dp" android:paddingTop="10dp"
            android:paddingRight="10dp" android:paddingBottom="10dp" android:padding="10dp"
            android:textColor="@android:color/black" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/imgDiceMain" android:textSize="24sp"/>
    <ImageView
            android:layout_width="92dp"
            android:layout_height="88dp" app:srcCompat="@drawable/dice" android:id="@+id/imgDiceMain"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="62dp" android:layout_marginEnd="160dp" android:layout_marginRight="160dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="160dp" android:layout_marginStart="160dp"
            android:contentDescription="@string/diceMain"/>
    <Button
            android:text="@string/newGameButton"
            android:layout_width="171dp"
            android:layout_height="60dp" android:id="@+id/btnNewGame"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/tbxWelcome" android:layout_marginEnd="120dp"
            android:layout_marginRight="120dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
    />
    <Button
            android:text="@string/rulesButton"
            android:layout_width="171dp"
            android:layout_height="60dp" android:id="@+id/btnRules"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/btnNewGame" android:layout_marginEnd="120dp"
            android:layout_marginRight="120dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/settingsButton"
            android:layout_width="171dp"
            android:layout_height="60dp" android:id="@+id/btnSettings"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/btnRules" android:layout_marginEnd="120dp"
            android:layout_marginRight="120dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
            app:layout_constraintHorizontal_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>